--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,50 @@ spring.datasource.password =1234
 # JPA
 spring.jpa.show_sql = true 
 spring.jpa.hibernate.ddl-auto =create
+
+
+#Oauth2
+#??? ?????? ???? id/pwd
+spring.security.oauth2.client.registration.naver.client-id=oLi0gHWlUO3XH9Ykeigr
+spring.security.oauth2.client.registration.naver.client-security=tD6ho8nJ9K
+
+
+#2. ???? [ ??? ??? ]
+spring.security.oauth2.client.registration.naver.scope = name , email
+#3. ?? url  -> Callback URL
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+#4. ?? ?? ??
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+#5. ????? ??
+spring.security.oauth2.client.registration.naver.client-name= naver
+# 6. ??url
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+# 7. ??url
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+# 8. ????url
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+# 9. ????? ???? JSON?  ? ??
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
+###################################################################################
+
+
+#Oauth2
+#??? ?????? ???? id/pwd
+
+spring.security.oauth2.client.registration.kakao.client-id=88ae29215f19bd5e5ebf48b534fc07a0
+spring.security.oauth2.client.registration.kakao.client-security=5vnF8qDdJdH7YyT4d4bp3DqNevmTdHGq
+
+
+spring.security.oauth2.client.registration.kakao.scope = profile_nickname,account_email
+
+spring.security.oauth2.client.registration.kakao.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+# ???? ?? ???-> ??? ??
+spring.security.oauth2.client.registration.kakao.client-name=kakao
+# provider ?? ?? -> ??? -> ??? ??
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=kakao_account
